<resources>
    <string name="app_name">FitHealth</string>
    <string name="contrasenia">Contraseña</string>
    <string name="InicioSesion">Iniciar Sesion</string>
    <string name="Registrarse">Aqui</string>
    <string name="Registro">Registro</string>
    <string name="NuevoUsuario">Nombre de usuario</string>
    <string name="VolverInicioSesion">Volver al inicio de sesion</string>
    <string name="mantenerSeson">Mantener Sesion Iniciada</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="dieta">Dieta</string>
    <string name="entrenamiento">Entrenamiento</string>
    <string name="social">Social</string>
    <string name="correo_electronico">Correo electronico</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="puedes_registrarte">Puedes registrarte</string>
    <string name="aqui">Aqui</string>
    <string name="requerido">requerido</string>
</resources>